[gd_scene load_steps=32 format=3 uid="uid://bawhbhakk6q0"]

[ext_resource type="PackedScene" uid="uid://bm67c4ebptsl8" path="res://Scenes/ScreenFx/Fader.tscn" id="1_6rpfu"]
[ext_resource type="Script" uid="uid://dkslg0mx1ah0g" path="res://Scripts/UI/TitleScreen.gd" id="1_68eqn"]
[ext_resource type="Texture2D" uid="uid://h51717e4n5i" path="res://Art/UI/Play.png" id="5_qdvgj"]
[ext_resource type="Texture2D" uid="uid://dn3m8yuk4lsxq" path="res://Art/UI/Select.png" id="6_3pf4f"]
[ext_resource type="Texture2D" uid="uid://ckdsdu8f71hrp" path="res://Art/UI/PlayClick.png" id="6_6mgjc"]
[ext_resource type="Texture2D" uid="uid://doua04qcaxxcr" path="res://Art/UI/PlayHover.png" id="7_50pjy"]
[ext_resource type="Texture2D" uid="uid://fod2aydisn1a" path="res://Art/UI/SelectClic.png" id="7_gcsim"]
[ext_resource type="Texture2D" uid="uid://doaktfdkde4of" path="res://Art/UI/SelectHov.png" id="8_7uh2j"]
[ext_resource type="Script" uid="uid://dayf6n8y4iuvj" path="res://Scripts/UI/levelselect.gd" id="9_m2g0r"]
[ext_resource type="AudioStream" uid="uid://b550nam8j715c" path="res://Sounds/Music/title.mp3" id="11_uqgl8"]
[ext_resource type="Texture2D" uid="uid://dysppjh16i01u" path="res://Art/UI/Pause/Return.png" id="12_n2kjl"]
[ext_resource type="PackedScene" uid="uid://dsydmqi4so3oo" path="res://Scenes/Screens/settings_menu.tscn" id="15_gcsim"]
[ext_resource type="AudioStream" uid="uid://u1dcvopbll0h" path="res://Sounds/UI/button.wav" id="16_2t6hu"]
[ext_resource type="Texture2D" uid="uid://bfa3ila75qrsc" path="res://Art/UI/Pause/gear.png" id="18_jmguy"]
[ext_resource type="Texture2D" uid="uid://bkimf272sdcmv" path="res://Art/UI/Pause/gearClic.png" id="19_h633f"]
[ext_resource type="Texture2D" uid="uid://bmmiiqigag568" path="res://Art/UI/Pause/gearHov.png" id="20_xte7y"]

[sub_resource type="Animation" id="Animation_v6q5r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("maintitle/SettingsButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("maintitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("maintitle/PlayButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(533, 400)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("maintitle/LevelSelectButton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(471.5, 500)]
}

[sub_resource type="Animation" id="Animation_caa3g"]
resource_name = "ShowTitle"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("maintitle/Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.9, 2),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(311, 1200), Vector2(311, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("maintitle/PlayButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("maintitle/SettingsButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.55, 1.85),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("maintitle/SettingsButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.35, 1.85),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("maintitle/PlayButton:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.05, 2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(533, 1200), Vector2(533, 300)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("maintitle/LevelSelectButton:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.35, 2),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(471.5, 1280), Vector2(471.5, 450)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("maintitle/LevelSelectButton:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_h3mb4"]
resource_name = "are_you_sure"
step = 0.1

[sub_resource type="Animation" id="Animation_u3itk"]
resource_name = "deselect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("maintitle/SettingsButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("maintitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ylvqx"]
resource_name = "makenewfile"
length = 0.2

[sub_resource type="Animation" id="Animation_uayom"]
resource_name = "select"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("maintitle/SettingsButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("maintitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kc4yn"]
resource_name = "unmakenewfile"
length = 0.2

[sub_resource type="Animation" id="Animation_ely0r"]
resource_name = "unsure"
length = 0.4

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wcorq"]
_data = {
&"RESET": SubResource("Animation_v6q5r"),
&"ShowTitle": SubResource("Animation_caa3g"),
&"are_you_sure": SubResource("Animation_h3mb4"),
&"deselect": SubResource("Animation_u3itk"),
&"makenewfile": SubResource("Animation_ylvqx"),
&"select": SubResource("Animation_uayom"),
&"unmakenewfile": SubResource("Animation_kc4yn"),
&"unsure": SubResource("Animation_ely0r")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_uqhov"]
atlas = ExtResource("12_n2kjl")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_utrmd"]
atlas = ExtResource("12_n2kjl")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir3w2"]
atlas = ExtResource("12_n2kjl")
region = Rect2(24, 0, 24, 24)

[sub_resource type="Animation" id="Animation_ovdyv"]
resource_name = "fadeMusicOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="Animation" id="Animation_3xdeg"]
resource_name = "musicIn"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-4.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nj6v8"]
_data = {
&"fadeMusicOut": SubResource("Animation_ovdyv"),
&"musicIn": SubResource("Animation_3xdeg")
}

[node name="TitleScene" type="ColorRect" node_paths=PackedStringArray("musicFader", "Fader", "TitleAnimator", "buttonSound")]
process_mode = 3
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(6.83457e-06, 0.599165, 0.754681, 1)
script = ExtResource("1_68eqn")
musicFader = NodePath("MusicPlayer/MusicController")
Fader = NodePath("Fader")
TitleAnimator = NodePath("TitleAnimator")
buttonSound = NodePath("ButtonSound")

[node name="Fader" parent="." instance=ExtResource("1_6rpfu")]

[node name="TitleAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wcorq")
}
autoplay = "ShowTitle"

[node name="maintitle" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="maintitle"]
texture_filter = 2
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 273.0
offset_top = 91.0
offset_right = 925.0
offset_bottom = 264.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 90
text = "3D GAME"

[node name="PlayButton" type="TextureButton" parent="maintitle"]
layout_mode = 0
offset_left = 533.0
offset_top = 300.0
offset_right = 746.0
offset_bottom = 437.0
focus_neighbor_left = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
texture_normal = ExtResource("5_qdvgj")
texture_pressed = ExtResource("6_6mgjc")
texture_hover = ExtResource("7_50pjy")
texture_disabled = ExtResource("5_qdvgj")
texture_focused = ExtResource("7_50pjy")
ignore_texture_size = true
stretch_mode = 1

[node name="LevelSelectButton" type="TextureButton" parent="maintitle"]
layout_mode = 0
offset_left = 471.5
offset_top = 450.002
offset_right = 808.5
offset_bottom = 587.002
focus_neighbor_left = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
texture_normal = ExtResource("6_3pf4f")
texture_pressed = ExtResource("7_gcsim")
texture_hover = ExtResource("8_7uh2j")
texture_disabled = ExtResource("6_3pf4f")
texture_focused = ExtResource("8_7uh2j")
stretch_mode = 1

[node name="SettingsButton" type="TextureButton" parent="maintitle"]
layout_mode = 0
offset_left = 24.0
offset_top = 600.0
offset_right = 144.0
offset_bottom = 720.0
scale = Vector2(0.8, 0.8)
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_right = NodePath("../PlayButton")
texture_normal = ExtResource("18_jmguy")
texture_pressed = ExtResource("19_h633f")
texture_hover = ExtResource("20_xte7y")

[node name="Levelselect" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_m2g0r")
numLevels = 5

[node name="LEvel Select" type="Label" parent="Levelselect"]
texture_filter = 2
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -415.0
offset_top = 7.0
offset_right = 169.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 90
text = "LEVEL SELECT"

[node name="levelContainer" type="GridContainer" parent="Levelselect"]
layout_mode = 0
offset_left = 45.0
offset_top = 132.0
offset_right = 1965.0
offset_bottom = 1688.0
scale = Vector2(0.5, 0.5)
columns = 8

[node name="backtomain" type="TextureButton" parent="Levelselect"]
layout_mode = 0
offset_left = 24.0
offset_top = 600.0
offset_right = 144.0
offset_bottom = 720.0
scale = Vector2(0.8, 0.8)
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_right = NodePath("../PlayButton")
texture_normal = ExtResource("18_jmguy")
texture_pressed = ExtResource("19_h633f")
texture_hover = ExtResource("20_xte7y")

[node name="Return" type="TextureButton" parent="Levelselect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -120.0
offset_right = 56.0
offset_bottom = -96.0
grow_vertical = 0
scale = Vector2(4, 4)
texture_normal = SubResource("AtlasTexture_uqhov")
texture_pressed = SubResource("AtlasTexture_utrmd")
texture_hover = SubResource("AtlasTexture_ir3w2")
texture_focused = SubResource("AtlasTexture_ir3w2")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_uqgl8")
volume_db = -80.0
bus = &"Music"

[node name="MusicController" type="AnimationPlayer" parent="MusicPlayer"]
libraries = {
&"": SubResource("AnimationLibrary_nj6v8")
}
autoplay = "musicIn"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_2t6hu")
volume_db = -2.0
bus = &"Sounds"

[node name="SettingsMenu" parent="." instance=ExtResource("15_gcsim")]
visible = false
z_index = 1
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1

[node name="FocusDummy" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="maintitle/PlayButton" to="." method="playButtonPressed"]
[connection signal="pressed" from="maintitle/LevelSelectButton" to="." method="levelSelectPressed"]
[connection signal="pressed" from="maintitle/SettingsButton" to="." method="_toggle_settings"]
[connection signal="pressed" from="Levelselect/Return" to="." method="_toggle_settings"]
